apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prod
  namespace: api
  labels:
    app: backend-prod
spec:
  selector:
    matchLabels:
      app: backend-prod
  template:
    metadata:
      labels:
        app: backend-prod
    spec:
      containers:
        - name: backend-prod
          image: hyeonwoo5342/backend-prod:5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "15"]
      imagePullSecrets:
        - name: dockerhub-secret
