apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-prod-ingress
  namespace: api
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.smallchat.kr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-prod
                port:
                  number: 8080
  # tls:
  #   - secretName: letsencrypt-prod
  #     hosts:
  #     - api.smallchat.kr
